# trait_enum

./: .travis.yml  Cargo.toml  readme.md
src/: lib.rs  test.rs
